# crypto-data-provider

./: .gitignore  .pylintc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
crypto_data_provider/: database.py  main.py  settings.py
crypto_data_provider/models/: candlestick.py  models.py
crypto_data_provider/schemas/: candlestick.py  status.py
crypto_data_provider/services/: crud.py  market.py
crypto_data_provider/utils/: logging.py  logging.yaml  utils.py
tests/: test_status.py
